--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -27,11 +27,13 @@
         "@mui/x-date-pickers": "^5.0.20",
         "chart.js": "^4.2.1",
         "commander": "^10.0.0",
+        "crypto-hash": "^2.0.1",
         "date-fns": "^2.29.3",
         "firebase": "^9.17.2",
         "highlight.js": "^11.7.0",
         "jose": "^4.12.0",
         "localforage": "^1.10.0",
+        "lodash": "^4.17.21",
         "match-sorter": "^6.3.1",
         "md5": "^2.3.0",
         "react": "^18.2.0",
@@ -60,6 +62,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
+        "@types/lodash": "^4.14.195",
         "@types/md5": "^2.3.2",
         "@types/node": "^16.18.11",
         "@types/react": "^18.0.27",
