[GraphQL] Fix deployment bug in parseQueryParams

--- a/graphql-service/apollo/Makefile
+++ b/graphql-service/apollo/Makefile
@@ -16,4 +16,4 @@ build-CopyDependencies:
 	cp -r ./schema "$(BUILD_DIR)/SQSApolloServer/schema"
 	cp -r ./schema "$(BUILD_DIR)/SettleAccountActivitiesCronJob/schema"
 
-	cp rtwrapper "$(BUILD_DIR)/ApolloServer/rtwrapper"
+# cp rtwrapper "$(BUILD_DIR)/ApolloServer/rtwrapper"
