--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -39,6 +39,7 @@
         "jsonwebtoken": "^9.0.0",
         "node-fetch": "^2.6.11",
         "object-hash": "^3.0.0",
+        "react": "^18.2.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
